fixed social icons overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ a:hover{
 	background:url(../img/bg-header.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	width:100%;
-	height:100%;
+	height:1000px;
 	}
 
 /*-- //menu --*/
